--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 #Port:
 server.port=8000
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/db
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.profiles.active=production
